# qwenvl_test

./: .gitignore  crawl_and_recognize.py  demo.py  demo_4b.py  llama_cpp_infer.py  main.py  pyproject.toml  requirements.txt  sim_boat.py  sim_boat_H_V.py  trajectory_result.txt
