[project]
name = "vlabel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "matplotlib>=3.10.8",
    "modelscope>=1.34.0",
    "opencv-python>=4.13.0.90",
    "scipy>=1.17.0",
    "vllm>=0.14.0",
]
